--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     compileOnly('org.projectlombok:lombok:1.18.36')
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+
     annotationProcessor ('org.projectlombok:lombok:1.18.36')
 
     implementation('org.postgresql:postgresql:42.5.0')
