--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.beryx.jlink' version '3.0.0'
 }
 
 group = 'org.example'
@@ -9,17 +10,50 @@ repositories {
     mavenCentral()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 dependencies {
+    // Основные зависимости
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    compileOnly('org.projectlombok:lombok:1.18.36')
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
-    annotationProcessor ('org.projectlombok:lombok:1.18.36')
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+    testCompileOnly 'org.projectlombok:lombok:1.18.36'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
 
-    implementation('org.postgresql:postgresql:42.5.0')
-    testCompileOnly ('org.projectlombok:lombok:1.18.36')
-    testAnnotationProcessor ('org.projectlombok:lombok:1.18.36')
+    // PostgreSQL
+    implementation 'org.postgresql:postgresql:42.5.0'
+
+    // Jackson (основные модули)
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
+    // Дополнительные модули Jackson (если нужны)
+    // implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2' // для работы с LocalDate
+    // implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2' // если проект на Kotlin
+}
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'coursework-manager'
+        jvmArgs = ['-Dfile.encoding=UTF-8']
+    }
+    // Добавляем модули, которые Gradle не обнаруживает автоматически
+    forceMerge('jackson', 'postgresql')
+}
+
+
+
+application {
+    mainClass = 'coursework_manager.Main'
 }
 
 test {
